feat: add simple OpenGL abstraction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ project(Openglnotes)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
-file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c" "src/*.h" "src/*.hpp")
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c" "src/*.h" "src/*.hpp" "src/OpenGL/*.cpp" "src/OpenGL/*.hpp")
+
 
 add_executable(Openglnotes ${SOURCES})
-
 # add_executable(Openglnotes
 #               src/glad.c
 #               src/main.cpp)
@@ -20,6 +20,7 @@ add_custom_target(copy_resources ALL
         COMMENT "Copying resources into binary directory")
 
 add_dependencies(Openglnotes copy_resources)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 target_include_directories(Openglnotes PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_link_libraries(Openglnotes glfw)
